# fagdag-mlflow

./: Ex1_0_Tracking.ipynb  Ex1_5_CustomArtifacts.ipynb  Ex1_Tracking.ipynb  Ex2_Serving.ipynb  Ex2_Tracking.ipynb  Ex3_Docker.ipynb  Ex4_AzureML.ipynb  Ex5_LLM.ipynb  README.md  pyproject.toml
