[project]
name = "mlflowtest"
version = "1.0.0"
dependencies = [
    "setuptools",
    "mlflow",
    "notebook",
    "tf-keras",
    "tensorflow",
    "hyperopt",
    "virtualenv",
    "pip",
    "seaborn",
    "openai",
    "tiktoken",
    "tenacity",
    "ipywidgets",
    "evaluate",
    "transformers",
    "textstat",
]
requires-python = ">= 3.11"


[tool.rye]
managed = true
virtual = true
dev-dependencies = ["ruff"
]

[tool.ruff]
target-version = 'py312'

[tool.ruff.lint]
select = ["ALL"]
ignore = ['E501','PD901', 'D203', 'D213']


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"__app__/*/__init__.py" = ["ARG001"]
"tests/**/*.py" = ["ANN", "S101", "SLF001", "PLR2004", "PT011", "S","D103","D100", "ARG001", "PLR0913", "PT006","D"]
"**/*.ipynb" = ["ALL"]
